--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -178,6 +178,9 @@
    <property name="text">
     <string>New</string>
    </property>
+   <property name="toolTip">
+    <string>New (Ctrl + n)</string>
+   </property>
   </action>
   <action name="actionOpen">
    <property name="icon">
@@ -196,6 +199,9 @@
    <property name="text">
     <string>Save</string>
    </property>
+   <property name="toolTip">
+    <string>Save (Ctrl + s)</string>
+   </property>
   </action>
   <action name="actionSave_as">
    <property name="icon">
@@ -204,6 +210,9 @@
    </property>
    <property name="text">
     <string>Save as</string>
+   </property>
+   <property name="toolTip">
+    <string>Save as (Ctrl + Shift + s)</string>
    </property>
   </action>
   <action name="actionExit">
@@ -223,6 +232,9 @@
    <property name="text">
     <string>Copy</string>
    </property>
+   <property name="toolTip">
+    <string>Copy (Ctrl + c)</string>
+   </property>
   </action>
   <action name="actionCut">
    <property name="icon">
@@ -232,6 +244,9 @@
    <property name="text">
     <string>Cut</string>
    </property>
+   <property name="toolTip">
+    <string>Cut (Ctrl + x)</string>
+   </property>
   </action>
   <action name="actionPaste">
    <property name="icon">
@@ -240,6 +255,9 @@
    </property>
    <property name="text">
     <string>Paste</string>
+   </property>
+   <property name="toolTip">
+    <string>Paste (Ctrl + v)</string>
    </property>
   </action>
   <action name="actionFind">
@@ -268,6 +286,9 @@
    <property name="text">
     <string>Select All</string>
    </property>
+   <property name="toolTip">
+    <string>Select All (Ctrl + a)</string>
+   </property>
   </action>
   <action name="actionZoom_in">
    <property name="icon">
@@ -277,6 +298,9 @@
    <property name="text">
     <string>Zoom in</string>
    </property>
+   <property name="toolTip">
+    <string>Zoom in (Ctrl + '+')</string>
+   </property>
   </action>
   <action name="actionZoom_out">
    <property name="icon">
@@ -285,6 +309,9 @@
    </property>
    <property name="text">
     <string>Zoom out</string>
+   </property>
+   <property name="toolTip">
+    <string>Zoom out (Ctrl + '-')</string>
    </property>
   </action>
   <action name="actionBold">
