--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,7 +40,7 @@
      <widget class="QLabel" name="DirName">
       <property name="font">
        <font>
-        <pointsize>12</pointsize>
+        <pointsize>10</pointsize>
        </font>
       </property>
       <property name="text">
@@ -163,6 +163,15 @@
    <property name="windowTitle">
     <string>toolBar</string>
    </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>16</width>
+     <height>16</height>
+    </size>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
@@ -171,6 +180,7 @@
    </attribute>
    <addaction name="actionNew"/>
    <addaction name="actionOpen"/>
+   <addaction name="actionOpenFolder"/>
    <addaction name="actionSave"/>
    <addaction name="actionSave_as"/>
    <addaction name="separator"/>
@@ -189,6 +199,28 @@
    <addaction name="actionFont"/>
    <addaction name="separator"/>
   </widget>
+  <widget class="QToolBar" name="toolBar_2">
+   <property name="windowTitle">
+    <string>toolBar_2</string>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>20</width>
+     <height>20</height>
+    </size>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>LeftToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionExplorer"/>
+   <addaction name="separator"/>
+  </widget>
   <action name="actionNew">
    <property name="icon">
     <iconset resource="resources.qrc">
@@ -198,7 +230,10 @@
     <string>New</string>
    </property>
    <property name="toolTip">
-    <string>New (Ctrl + n)</string>
+    <string>New (Ctrl + N)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
    </property>
   </action>
   <action name="actionOpen">
@@ -207,7 +242,13 @@
      <normaloff>:/files/images/open.png</normaloff>:/files/images/open.png</iconset>
    </property>
    <property name="text">
-    <string>Open</string>
+    <string>Open file</string>
+   </property>
+   <property name="toolTip">
+    <string>Open file (Ctrl + O)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
    </property>
   </action>
   <action name="actionSave">
@@ -219,7 +260,10 @@
     <string>Save</string>
    </property>
    <property name="toolTip">
-    <string>Save (Ctrl + s)</string>
+    <string>Save (Ctrl + S)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionSave_as">
@@ -231,7 +275,10 @@
     <string>Save as</string>
    </property>
    <property name="toolTip">
-    <string>Save as (Ctrl + Shift + s)</string>
+    <string>Save as (Ctrl + Shift + S)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
    </property>
   </action>
   <action name="actionExit">
@@ -241,6 +288,12 @@
    </property>
    <property name="text">
     <string>Exit</string>
+   </property>
+   <property name="toolTip">
+    <string>Exit (Ctrl + Q)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
   <action name="actionCopy">
@@ -252,7 +305,10 @@
     <string>Copy</string>
    </property>
    <property name="toolTip">
-    <string>Copy (Ctrl + c)</string>
+    <string>Copy (Ctrl + C)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
    </property>
   </action>
   <action name="actionCut">
@@ -264,7 +320,10 @@
     <string>Cut</string>
    </property>
    <property name="toolTip">
-    <string>Cut (Ctrl + x)</string>
+    <string>Cut (Ctrl + X)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+X</string>
    </property>
   </action>
   <action name="actionPaste">
@@ -276,7 +335,10 @@
     <string>Paste</string>
    </property>
    <property name="toolTip">
-    <string>Paste (Ctrl + v)</string>
+    <string>Paste (Ctrl + V)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+V</string>
    </property>
   </action>
   <action name="actionFind">
@@ -306,7 +368,10 @@
     <string>Select All</string>
    </property>
    <property name="toolTip">
-    <string>Select All (Ctrl + a)</string>
+    <string>Select All (Ctrl + A)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+A</string>
    </property>
   </action>
   <action name="actionZoom_in">
@@ -318,7 +383,10 @@
     <string>Zoom in</string>
    </property>
    <property name="toolTip">
-    <string>Zoom in (Ctrl + '+')</string>
+    <string>Zoom in (Ctrl + '=')</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+=</string>
    </property>
   </action>
   <action name="actionZoom_out">
@@ -331,6 +399,9 @@
    </property>
    <property name="toolTip">
     <string>Zoom out (Ctrl + '-')</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+-</string>
    </property>
   </action>
   <action name="actionBold">
@@ -413,6 +484,12 @@
    <property name="text">
     <string>Undo</string>
    </property>
+   <property name="toolTip">
+    <string>Undo (Crtl + Z)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
+   </property>
   </action>
   <action name="actionRedo">
    <property name="icon">
@@ -421,6 +498,42 @@
    </property>
    <property name="text">
     <string>Redo</string>
+   </property>
+   <property name="toolTip">
+    <string>Redo (Ctrl + Y)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Y</string>
+   </property>
+  </action>
+  <action name="actionExplorer">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/files/images/explorer.png</normaloff>:/files/images/explorer.png</iconset>
+   </property>
+   <property name="text">
+    <string>Explorer</string>
+   </property>
+   <property name="toolTip">
+    <string>Show / Hide explorer (Crtl + B)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+B</string>
+   </property>
+  </action>
+  <action name="actionOpenFolder">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/files/images/open.png</normaloff>:/files/images/open.png</iconset>
+   </property>
+   <property name="text">
+    <string>OpenFolder</string>
+   </property>
+   <property name="toolTip">
+    <string>Open folder (Ctrl + Shift + O)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+O</string>
    </property>
   </action>
  </widget>
