--- a/resources.qrc
+++ b/resources.qrc
@@ -16,10 +16,6 @@
         <file>images/save.png</file>
         <file>images/saveas.png</file>
         <file>images/select_all.png</file>
-        <file>images/text_align_center.png</file>
-        <file>images/text_align_justify.png</file>
-        <file>images/text_align_left.png</file>
-        <file>images/text_align_right.png</file>
         <file>images/text_bold.png</file>
         <file>images/text_italic.png</file>
         <file>images/text_replace.png</file>
@@ -27,5 +23,6 @@
         <file>images/text_underline.png</file>
         <file>images/zoom_in.png</file>
         <file>images/zoom_out.png</file>
+        <file>images/explorer.png</file>
     </qresource>
 </RCC>
