--- a/resources.qrc
+++ b/resources.qrc
@@ -27,5 +27,9 @@
         <file>images/add-file.png</file>
         <file>images/add-folder.png</file>
         <file>images/close-icon.png</file>
+        <file>images/delete.png</file>
+        <file>images/rename.png</file>
+        <file>images/writing.png</file>
+        <file>images/settings.png</file>
     </qresource>
 </RCC>
