--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,6 +43,12 @@
       </property>
       <item>
        <widget class="QTreeView" name="treeView">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="maximumSize">
          <size>
           <width>200</width>
@@ -137,7 +143,7 @@
              <widget class="QLabel" name="FindLabel">
               <property name="maximumSize">
                <size>
-                <width>55</width>
+                <width>70</width>
                 <height>16777215</height>
                </size>
               </property>
@@ -173,6 +179,9 @@
               <property name="text">
                <string>Find down</string>
               </property>
+              <property name="flat">
+               <bool>false</bool>
+              </property>
              </widget>
             </item>
             <item>
@@ -185,6 +194,9 @@
               </property>
               <property name="text">
                <string>Find up</string>
+              </property>
+              <property name="flat">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
@@ -263,12 +275,18 @@
               <property name="text">
                <string>Replace</string>
               </property>
+              <property name="flat">
+               <bool>false</bool>
+              </property>
              </widget>
             </item>
             <item>
              <widget class="QPushButton" name="ReplacAll">
               <property name="text">
                <string>Replace all</string>
+              </property>
+              <property name="flat">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
