--- a/resources.qrc
+++ b/resources.qrc
@@ -29,5 +29,6 @@
         <file>images/rename.png</file>
         <file>images/writing.png</file>
         <file>images/style.css</file>
+        <file>images/settings.png</file>
     </qresource>
 </RCC>
