--- a/images/style.css
+++ b/images/style.css
@@ -1,3 +1,4 @@
+QPushButton{border:none;}
 QMenuBar,QLabel,QTreeView,QDialog,QPushButton,QLineEdit,QMenu{background-color: #474747; color: #c0392b;}
 QTextEdit {background-color: #474747;color: #ecf0f1;}
 QToolBar {border: none;background-color: #c0392b;}
